# cmrust

./: .gitignore  Cargo.toml  README.md  ToDo.md  chat.md
.cargo/: config.toml
JSON/: flags.json
JSON/pt-BR/: atual.json  lingua.json  nomes.json  paises.json  start.json  tecnicos.json
assets/data/: README.md
crates/cm_ai/: Cargo.toml
crates/cm_ai/src/: board_ai.rs  lib.rs  matchday_ai.rs  personalities.rs  press_ai.rs  scouting.rs  squad_builder.rs  staff_ai.rs  tactics_ai.rs  transfer_ai.rs
crates/cm_api/: Cargo.toml
crates/cm_api/src/: dto.rs  handlers.rs  lib.rs  routes.rs
crates/cm_cli/: Cargo.toml
crates/cm_cli/src/: errors.rs  main.rs  output.rs
crates/cm_cli/src/commands/: advance_day.rs  export_save.rs  import_data.rs  mod.rs  new_game.rs  simulate_match.rs
crates/cm_core/: Cargo.toml
crates/cm_core/src/: errors.rs  ids.rs  lib.rs  prelude.rs
crates/cm_core/src/economy/: budget.rs  mod.rs  money.rs  wage.rs
crates/cm_core/src/sim/: events.rs  mod.rs  rng.rs  rules.rs  time.rs
crates/cm_core/src/world/: academy.rs  attributes.rs  board.rs  calendar.rs  club.rs  competition.rs  contract.rs  fixtures.rs  history.rs  injury.rs  mod.rs  morale.rs  nation.rs  player.rs  referee.rs  reputation.rs  scouting.rs  stadium.rs  staff.rs  table.rs  tactics.rs  training.rs
crates/cm_data/: Cargo.toml
crates/cm_data/src/: errors.rs  lib.rs  store.rs
crates/cm_data/src/db/: mod.rs  queries.rs  sqlite.rs
crates/cm_data/src/import/: json_importer.rs  mod.rs  validators.rs
crates/cm_data/src/repositories/: calendar.rs  clubs.rs  competitions.rs  mod.rs  players.rs  saves.rs  staff.rs
crates/cm_engine/: Cargo.toml
crates/cm_engine/src/: config.rs  errors.rs  game.rs  lib.rs  state.rs
crates/cm_engine/src/inbox/: filters.rs  generators.rs  message.rs  mod.rs
crates/cm_engine/src/systems/: academy_system.rs  ai_system.rs  board_system.rs  competition_system.rs  finance_system.rs  injury_system.rs  match_system.rs  mod.rs  morale_system.rs  press_system.rs  save_system.rs  time_manager.rs  training_system.rs  transfer_system.rs
crates/cm_finance/: Cargo.toml
crates/cm_finance/src/: debt.rs  ffp.rs  lib.rs  model.rs  prizes.rs  rules.rs  sponsorship.rs  tests.rs  ticketing.rs  wage.rs
crates/cm_gui/src/: index.html  main.js
crates/cm_gui/src-tauri/: Cargo.toml
crates/cm_gui/src-tauri/src/: lib.rs  models.rs
crates/cm_gui/src/assets/JSON/pt-BR/: times.json
crates/cm_match/: Cargo.toml
crates/cm_match/src/: commentary.rs  discipline.rs  fatigue.rs  injuries.rs  lib.rs  model.rs  probabilistic.rs  ratings.rs  referee.rs  set_pieces.rs  tactics.rs  tests.rs
crates/cm_save/: Cargo.toml
crates/cm_save/src/: compression.rs  errors.rs  format.rs  integrity.rs  lib.rs  snapshot.rs  versioning.rs
crates/cm_server/: Cargo.toml
crates/cm_server/src/: main.rs
crates/cm_telemetry/: Cargo.toml
crates/cm_telemetry/src/: errors.rs  lib.rs  logging.rs  metrics.rs  tracing.rs
crates/cm_transfers/: Cargo.toml
crates/cm_transfers/src/: agents.rs  clauses.rs  lib.rs  loan.rs  model.rs  negotiation.rs  tests.rs  valuation.rs  window.rs  work_permit.rs
crates/cm_tui/: Cargo.toml
crates/cm_tui/src/: app.rs  main.rs
crates/cm_tui/src/screens/: inbox.rs  main_menu.rs  match_day.rs  mod.rs  squad.rs  tactics.rs  transfers.rs
crates/cm_tui/src/widgets/: footer.rs  header.rs  mod.rs  popup.rs  table.rs
crates/cm_utils/: Cargo.toml
crates/cm_utils/src/: errors.rs  fs.rs  hashing.rs  lib.rs  rng.rs  serde_ext.rs  time.rs
docs/: game.css  game.html  game.js  index.html  styles.css
release/: README.txt
release/assets/data/: calendar.json  clubs.json  competitions.json  nations.json  referees.json  stadiums.json  staff.json  tactics_presets.json
release/assets/names/: first_names_en.txt  first_names_pt.txt  last_names_en.txt  last_names_pt.txt
release/assets/ui/: theme.toml
