[package]
name = "cm_server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cm_server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

cm_api = { path = "../cm_api" }
cm_telemetry = { path = "../cm_telemetry" }
